--- a/src/main.css
+++ b/src/main.css
@@ -1,11 +1,33 @@
+body {
+    margin: 0px;
+    font-family: 'Nunito';
+}
+
+.panel {
+    background-color: #F5F8FA;
+}
+
+.panel-master {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    display: flex;
+}
+
 .box-left {
     width: 63%;
     height: 100vh;
 }
 
-#page-create-user {
-    width: 100vw;
-    height: 100vh;
+.content-left {
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.content-right {
+    display: flex;
+    justify-content: center;
 }
 
 .column {
@@ -24,6 +46,15 @@
 
 .margin-content {
     margin-left: 86px;
+}
+
+.company-name {
+    color: white;
+}
+
+.title-login {
+    color: #5C8599;
+    margin-bottom: 8%;
 }
 
 input {
@@ -49,7 +80,7 @@ input {
     border: #85E8BE;
     justify-content: center;
     color: white;
-    transition-duration: 0.2s;
+    transition-duration: 0.4s;
 }
 
 .btn-style:hover {
@@ -146,6 +177,12 @@ input:checked+.lbm-check::before {
     border: 1px solid #D3E2E5;
     box-sizing: border-box;
     border-radius: 20px;
+}
+
+.panel-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
