--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -1,11 +1,35 @@
 .input-block {
+    position: relative;
+}
+
+.input-block label {
+    font-size: 1.6rem;
+}
+
+.input-block input {
     border: 1px solid #D3E2E5;
     box-sizing: border-box;
     border-radius: 20px;
     background: #F5F8FA;
-    width: 360px;
-    height: 64px;
+    width: 100%;
+    height: 5.6rem;
     margin: 2% 0px;
+    display: flex;
     padding: 15px;
+    color: #8FA7B3;
+}
+
+.input-block:focus-within::after {
+    width: calc(100% - 3.2rem);
+    height: 2px;
+    content: '';
+    background: #8FA7B3;
+    position: absolute;
+    left: 1.6rem;
+    right: 1.6rem;
+    bottom: 0;
+}
+
+.input-block label {
     color: #8FA7B3;
 }
