--- a/src/pages/CreateUser/styles.css
+++ b/src/pages/CreateUser/styles.css
@@ -1,212 +1,60 @@
-.box-left {
-    width: 63%;
-    height: 100vh;
-}
-
 #page-create-user {
     width: 100vw;
     height: 100vh;
 }
 
-.column {
-    flex-direction: column;
-}
-
-.row {
+#page-create-user main {
+    max-width: 700px;
+    max-height: 1100px;
+    margin: 3.2rem auto;
+    background-color: white;
+    border: 1px solid #D3E2E5;
+    box-sizing: border-box;
+    border-radius: 20px;
+    display: flex;
     flex-direction: row;
-}
-
-.box-right {
-    width: 37%;
-    height: 100vh;
-    background-color: white;
-}
-
-.margin-content {
-    margin-left: 86px;
-}
-
-input {
-    display: flex;
-}
-
-.input-style {
-    border: 1px solid #D3E2E5;
-    box-sizing: border-box;
-    border-radius: 20px;
-    background: #F5F8FA;
-    width: 360px;
-    height: 64px;
-    margin: 2% 0px;
-    padding: 15px;
-}
-
-.btn-style {
-    width: 360px;
-    height: 64px;
-    background: #85E8BE;
-    border-radius: 20px;
-    border: #85E8BE;
+    flex-wrap: wrap;
     justify-content: center;
-    color: white;
-    transition-duration: 0.2s;
 }
 
-.btn-style:hover {
-    background-color: #37C77F;
-}
-
-.align-content-input {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    margin: 3% 0% 7% 12%;
-}
-
-.ckb-style {
-    display: none;
-}
-
-.lbm-check {
-    position: relative;
-}
-
-.lbm-check::before {
-    content: "";
-    position: absolute;
-    left: -30px;
-    width: 24px;
-    height: 24px;
-    border: solid 1px #D3E2E5;
-    display: inline-block;
-    box-sizing: border-box;
-    border-radius: 8px;
-    background-color: #F5F8FA;
-}
-
-input:checked+.lbm-check::before {
-    background-color: #37C77F;
-}
-
-.link-style {
-    text-decoration: none;
-    color: #8FA7B3;
-}
-
-.link-style-menu {
-    text-decoration: none;
-}
-
-.link-style-menu::before {
-    content: "";
-    position: absolute;
-    bottom: 10px;
-    left: 24px;
-    width: 48px;
-    height: 48px;
-    display: inline-block;
-    box-sizing: border-box;
-    border-radius: 16px;
-    background-color: #12AFCB;
-}
-
-.link-style-menu:hover::before {
-    background-color: #17D6EB;
-}
-
-.margin-left {
-    margin-left: 16%;
-}
-
-.margin-top {
-    margin-top: 3%;
-}
-
-.font-color {
-    color: #8FA7B3;
-}
-
-.display-content {
-    display: flex;
-    justify-content: initial;
-    align-items: center;
-}
-
-.menu {
-    position: fixed;
-    background-color: #15C3D6;
-    height: 100vh;
-    width: 6.67%;
-}
-
-.panel-register {
-    background-color: white;
-    width: 49.2%;
-    height: 100%;
-    border: 1px solid #D3E2E5;
-    box-sizing: border-box;
-    border-radius: 20px;
-    align-items: center;
-}
-
-.margin-register-top {
-    margin-top: 5%;
-}
-
-.title-register {
+#page-create-user main h1 {
     color: #4D6F80;
-    margin: 5%;
+    border-bottom: 1px solid #91a3a7;
+    font-weight: 700;
+    margin: 5% auto;
 }
 
-.content-center {
-    display: flex;
+#page-create-user main form {
+    width: 90%;
+    height: 100%;
+    margin-top: 7% 0%;
+}
+
+#avatar-container {
+    width: 100%;
     justify-content: center;
+    padding-bottom: 3rem;
 }
 
-.line {
-    border-bottom: 1px solid #D3E2E5;
-}
-
-.circle {
-    height: 270px;
-}
-
-.circle::after {
-    content: "";
-    position: absolute;
-    width: 269px;
-    height: 269px;
-    border: solid 1px #616161;
-    display: inline-block;
-    box-sizing: border-box;
+#user-avatar {
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border: 0;
     border-radius: 100%;
-    background-color: #C4C4C4;
+    margin: 0 auto;
+    background-color: #D3E2E5;
 }
 
-.margin-logo-menu {
-    margin: 10%
+#page-create-user main form fieldset {
+    border: 0;
+    padding: 0 2.4rem;
 }
 
-.img {
-    margin-top: 8%;
-    z-index: 1000;
+#page-create-user main form fieldset+fieldset {
+    margin-top: 6.4rem;
 }
 
-.div-form {
-    margin: 7% 0%;
-}
-
-.btn-margin {
-    margin-top: 10%;
-}
-
-.register {
-    width: 450px;
-    height: 60px;
-}
-
-.img-position {
-    position: absolute;
-    bottom: 22px;
-    left: 36px;
+#page-create-user main form button {
+    align-self: center;
 }
