--- a/src/components/CheckBox/styles.css
+++ b/src/components/CheckBox/styles.css
@@ -1,23 +1,24 @@
-#checkbox-label {
-    position: relative;
-}
-
 .checkbox-value {
     display: none;
 }
 
-.checkbox-value::before {
-    content: '';
-    position: fixed;
-    width: 2.4rem;
-    height: 2.4rem;
+.checkbox-label{
+    position: relative;
+}
+
+.checkbox-label::before {
+    content: "";
+    position: absolute;
+    left: -30px;
+    width: 24px;
+    height: 24px;
     border: solid 1px #D3E2E5;
     display: inline-block;
     box-sizing: border-box;
     border-radius: 8px;
-    background-color: black;
+    background-color: #F5F8FA;
 }
 
-.checkbox input:checked+#checkbox-label::before {
+input:checked+.checkbox-label::before {
     background-color: #37C77F;
 }
