feat: criar página de listagem de parceiros

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -23,7 +23,8 @@ body, input, button, textarea {
 }
 
 .container {
-    width: 90vw;
+    width: 100vw;
+    height: 100vh;
 }
 
 @media (min-width: 700px) {
