--- a/src/components/PartnerItem/styles.css
+++ b/src/components/PartnerItem/styles.css
@@ -1,9 +1,11 @@
 .partner-item {
-    /* background: var(--color-box-base); */
-    border: 1px solid varl(--color-line-in-white);
+    background: var(--color-input-in-white);
     border-radius: 0.8rem;
+    border: 0.5px solid var(--color-line-in-white);
+    margin: 0 4rem;
     flex-direction: row;
     margin-top: 2.4rem;
+    border-radius: 2rem;
     overflow: hidden;
 }
 
@@ -26,7 +28,7 @@
 .partner-item header div strong {
     font: 700 3.4rem;
     display: block;
-    /* color: var(--color-text-title) */
+    color: var(--color-text-title)
 }
 
 .partner-item header div span {
@@ -42,37 +44,34 @@
 }
 
 .partner-item footer {
-    padding: 3.2rem 2rem;
     background: var(--color-box-footer);
     border-top: 1px solid var(--color-line-in-white);
+    padding: 2rem 4rem;
     margin-top: 3.2rem;
     display: flex;
     align-items: center;
+    align-self: flex-end;
     justify-content: space-between;
 }
 
+.partner-item footer div {
+    display: flex;
+    width: 33%;
+    flex-direction: column;
+    align-items: center;
+}
+
 .partner-item footer p strong {
-    color: var(--color-primary);
+    color: var(--color-secondary-dark);
     font-size: 1.6rem;
     display: block;
 }
 
-.partner-item footer a {
+.partner-item img {
     text-decoration: none;
-    width: 20rem;
-    height: 5.6rem;
-    background: var(--color-secondary);
-    color: var(--color-button-text);
-    border: 0;
-    border-radius: 0.8rem;
-    cursor: pointer;
-    font: 700 1.4rem Archivo;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    transition: 0.2s;
+    width: 4rem;
 }
 
-.partner-item footer a:hover {
+.partner-item .profile-icon .partner-item footer a:hover {
     background: var(--color-secondary-dark);
 }
