--- a/src/pages/PartnersList/styles.css
+++ b/src/pages/PartnersList/styles.css
@@ -1,25 +1,39 @@
 #page-partners-list {
     width: 100vw;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
 
 #page-partners-list main {
-    max-width: 1000px;
     max-height: 1300px;
     margin: 3.2rem auto;
+    width: 80%;
     background-color: white;
     border: 1px solid #D3E2E5;
     box-sizing: border-box;
+    grid-column-start: 2;
     border-radius: 20px;
-    display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
 }
 
+#partners-list {
+    padding: 2rem 0;
+}
+
+#partners-list a:link {
+    text-decoration: none;
+    color: var(--color-text-base);
+}
+
 #page-partners-list main h1 {
-    color: #4D6F80;
-    border-bottom: 1px solid #91a3a7;
+    color: var(--color-text-title);
+    border-bottom: 1px solid var(--color-line-in-white);
+    padding: 0 2rem;
     font-weight: 700;
-    margin: 5% auto;
+    margin: 3rem auto;
+    width: 90%;
+    text-align: center;
 }
