feat: criar tela de agendamento de serviço

--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -122,6 +122,10 @@ input:checked+.lbm-check::before {
     position: relative;
 }
 
+#login-form {
+    width: 100%;
+}
+
 .link-style {
     text-decoration: none;
     color: #8FA7B3;
