--- a/src/pages/PartnersList/styles.css
+++ b/src/pages/PartnersList/styles.css
@@ -6,7 +6,7 @@
 }
 
 #page-partners-list main {
-    max-height: 1300px;
+    max-height: 4000px;
     margin: 3.2rem auto;
     width: 80%;
     background-color: white;
@@ -29,7 +29,7 @@
 }
 
 #page-partners-list main h1 {
-    color: var(--color-text-title);
+    /* color: var(--color-text-title); */
     border-bottom: 1px solid var(--color-line-in-white);
     padding: 0 2rem;
     font-weight: 700;
